--- a/fading.html
+++ b/fading.html
@@ -8,10 +8,17 @@
 </head>
 <body>
   <div id="content">
+    <h1>The Complete jQuery Course - Project Structure</h1>
     <div class="red-box">Red</div>
     <div class="green-box">Green</div>
     <div class="blue-box">Blue</div>
+    <div class="blue-box2">Blue</div>
     <div class="clear"></div>
+
+    <h2>Hi, I'm the Base Project!</h2>
+    <p>Add elements here as you like to try out jQuery. This is your playground to test out anything that comes into your mind.</p>
+    <p><strong>OR:</strong> Copy this project structure into a new directory first to create separate playgrounds for animations, manipulations, event handlers etc.</p>
+
   </div>
 
 </body>
