--- a/codeWarsPractice.html
+++ b/codeWarsPractice.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Code Wars</title>
 </head>
 <body>
-$END$
+<h2>Utilize your console, please :)</h2>
+<!--JavaScript -->
+<script src="codeWarsPractice.js"></script>
+
+<!--jQuery-->
+<script
+        src="https://code.jquery.com/jquery-2.2.4.js"
+        integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
+        crossorigin="anonymous"></script>
+
 </body>
 </html>
