updated navbar notes

--- a/materializeNavBar.html
+++ b/materializeNavBar.html
@@ -10,16 +10,19 @@
 </head>
 <body>
 <!--PLAIN NAV BAR WITH RIGHT ALIGNED LINKS-->
-<nav>
-    <div class="nav-wrapper">
-        <a href="#" class="brand-logo">Logo</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">JavaScript</a></li>
-        </ul>
-    </div>
-</nav>
+<!--<nav>-->
+<!--    <div class="nav-wrapper">-->
+<!--        <a href="#" class="brand-logo">Logo</a>-->
+<!--        <ul id="nav-mobile" class="right hide-on-med-and-down">-->
+<!--            <li><a href="sass.html">Sass</a></li>-->
+<!--            <li><a href="badges.html">Components</a></li>-->
+<!--            <li><a href="collapsible.html">JavaScript</a></li>-->
+<!--            <li></li>-->
+<!--        </ul>-->
+<!--    </div>-->
+<!--</nav>-->
+
+<!--ALL THAT IS NEEDED TO DO A DROP DOWN NAVBAR. THE ABOVE CODE IS JUST TO COMPARE THE TWO NAV BARS. THIS CODE DOES WORK ON MY OWN COMPUTER IN THE BROWSER HOSTED WEBPAGE.-->
 <!-- Dropdown Structure -->
 <ul id="dropdown1" class="dropdown-content">
     <li><a href="#!">one</a></li>
