--- a/CanvasPlay.html
+++ b/CanvasPlay.html
@@ -11,21 +11,23 @@
     const ctx = canvas.getContext('2d');//this is where all drawing will take place for canvas
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
-    ctx.strokeStyle = 'pink';
+    ctx.strokeStyle = '#BADA55';
     ctx.lineJoin = 'round';
     ctx.lineCap = 'round';
     ctx.lineWidth = 100;
+    ctx.globalCompositeOperation = 'multiply';
 
     let isDrawing = false;//makes cursor draw when clicked
     let lastX = 0;
     let lastY = 0;
     let hue = 0;
+    let direction = true;
 
     function draw (e){
         if (!isDrawing) return; //stop fn from running when not using mouse
         console.log(e);
-        ctx.stokeStyle = `hsl(${hue}, 100%, 50%)`;// this is not working for some reason
-        ctx.lineWidth = hue;
+        ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`;// this is not working for some reason
+        // ctx.lineWidth = hue;//used to trouble shoot the hue
         ctx.beginPath();// start drawing
         ctx.moveTo(lastX,lastY);//during drawing(beginning points to go to)
         ctx.lineTo(e.offsetX, e.offsetY);//data comes from mouse movements
@@ -38,6 +40,15 @@
             hue = 0;
         }
 
+        if(ctx.lineWidth >= 100 || ctx.lineWidth <= 1){
+            direction = !direction;
+        }
+
+        if(direction) {
+            ctx.lineWidth++;
+        }else{
+            ctx.lineWidth--;
+        }
 
     }
 
@@ -61,4 +72,3 @@
 
 </body>
 </html>
-
